--- a/challenge.css
+++ b/challenge.css
@@ -1,6 +1,7 @@
-body {}
-
 h1 {
     background-color: blueviolet;
     color: white;
+    justify-items: center;
+    align-content: center;
+    align-items: center;
 }
