--- a/challenge.css
+++ b/challenge.css
@@ -1,7 +1,6 @@
 h1 {
     background-color: blueviolet;
     color: white;
+    text-align: center;
     justify-items: center;
-    align-content: center;
-    align-items: center;
 }
